# cookiecutter-data-science

./: cookiecutter.json
{{ cookiecutter.repo_name }}/: pyproject.toml
{{ cookiecutter.repo_name }}/src/visualization/: style.mplstyle
